--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 requests = "^2.31.0"
 bs4 = "^0.0.2"
+stubs = "^1.0.0"
 
 
 [tool.poetry.group.lint.dependencies]
