--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 requests = "^2.31.0"
 bs4 = "^0.0.2"
 stubs = "^1.0.0"
+types-requests = "^2.31.0.20240406"
 
 
 [tool.poetry.group.lint.dependencies]
