--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ requests = "^2.31.0"
 bs4 = "^0.0.2"
 stubs = "^1.0.0"
 types-requests = "^2.31.0.20240406"
+pandas = "^2.2.2"
+openpyxl = "^3.1.2"
+pandas-stubs = "^2.2.2.240514"
 
 
 [tool.poetry.group.lint.dependencies]
